--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack/webpack.config.dev.ts",
+    "build": "webpack --config webpack/webpack.config.dev.ts ",
     "build-prod": "webpack --config webpack/webpack.config.prod.ts",
     "start": "webpack-dev-server  --config webpack/webpack.config.dev.ts --open --hot"
   },
@@ -19,7 +19,13 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/redux": "^3.6.0",
     "@types/redux-saga": "^0.10.5",
+    "css-loader": "^3.5.3",
+    "css-modules-typescript-loader": "^4.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
