--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/redux-saga": "^0.10.5",
     "css-loader": "^3.5.3",
     "css-modules-typescript-loader": "^4.0.0",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
