--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A list of first generation pokemons and their details",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "build": "webpack --config webpack/webpack.config.dev.ts ",
     "build-prod": "webpack --config webpack/webpack.config.prod.ts",
     "start": "webpack-dev-server  --config webpack/webpack.config.dev.ts --open --hot"
@@ -12,21 +12,28 @@
   "author": "Apak00",
   "license": "ISC",
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.9.0",
+    "@testing-library/react": "^10.0.4",
     "@types/axios": "^0.14.0",
+    "@types/jest": "^25.2.3",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux": "^3.6.0",
     "@types/redux-saga": "^0.10.5",
+    "babel-jest": "^26.0.1",
     "css-loader": "^3.5.3",
     "css-modules-typescript-loader": "^4.0.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
+    "redux-mock-store": "^1.5.4",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
+    "ts-jest": "^26.1.0",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
@@ -34,6 +41,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@types/redux-mock-store": "^1.0.2",
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
